--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python = "^3.8"
 rich = "^12.4.4"
 httpx = "^0.23.0"
 click = "^8.1.3"
+colorama = "^0.4.3"
+termcolor = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
