--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ httpx = "^0.23.0"
 click = "^8.1.3"
 colorama = "^0.4.3"
 termcolor = "^1.1.0"
+fortune = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
